<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable name="performer" type="com.example.vynils.model.Performer" />
    </data>

    <ScrollView
        android:fillViewport="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/black"
            tools:context=".ui.performerDetail.PerformerDetail">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:layout_editor_absoluteX="0dp"
                android:baselineAligned="false">

                <ImageView
                    android:contentDescription="@string/image_performer_description"
                    android:id="@+id/imagePerformer"
                    android:layout_width="match_parent"
                    android:layout_height="224dp"
                    tools:layout_editor_absoluteX="16dp"
                    tools:layout_editor_absoluteY="16dp"
                    tools:srcCompat="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/textViewPerformerName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                    android:text="Nombre artista"
                    android:textColor="@color/aguamarina"
                    android:textSize="32sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/textViewCreationDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                    android:text="release date artista"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="normal" />


                <TextView
                    android:id="@+id/textViewDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                    android:layout_marginTop="@dimen/activity_horizontal_margin"
                    android:layout_marginBottom="@dimen/activity_horizontal_margin"
                    android:inputType="textMultiLine"
                    android:text="Descripción artista"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="normal" />

                <TextView
                    android:id="@+id/textViewAlbumes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                    android:layout_marginBottom="16dp"
                    android:text="@string/title_album"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <HorizontalScrollView
                    android:id="@+id/scrollAlbumList"
                    android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/containerPerformerAlbumList"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:orientation="horizontal"
                        android:gravity="left">

                        <ImageView
                            android:contentDescription="@string/image_album_performer_description"
                            android:id="@+id/albumPerformerImg"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:visibility="invisible" />

                    </LinearLayout>
                </HorizontalScrollView>


            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>